; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/zd1211rw/extr_zd_rf.c_zd_rf_clear.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/zd1211rw/extr_zd_rf.c_zd_rf_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zd_rf = type { i32 (%struct.zd_rf*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zd_rf_clear(%struct.zd_rf* %0) #0 {
  %2 = alloca %struct.zd_rf*, align 8
  store %struct.zd_rf* %0, %struct.zd_rf** %2, align 8
  %3 = load %struct.zd_rf*, %struct.zd_rf** %2, align 8
  %4 = getelementptr inbounds %struct.zd_rf, %struct.zd_rf* %3, i32 0, i32 0
  %5 = load i32 (%struct.zd_rf*)*, i32 (%struct.zd_rf*)** %4, align 8
  %6 = icmp ne i32 (%struct.zd_rf*)* %5, null
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load %struct.zd_rf*, %struct.zd_rf** %2, align 8
  %9 = getelementptr inbounds %struct.zd_rf, %struct.zd_rf* %8, i32 0, i32 0
  %10 = load i32 (%struct.zd_rf*)*, i32 (%struct.zd_rf*)** %9, align 8
  %11 = load %struct.zd_rf*, %struct.zd_rf** %2, align 8
  %12 = call i32 %10(%struct.zd_rf* %11)
  br label %13

13:                                               ; preds = %7, %1
  %14 = load %struct.zd_rf*, %struct.zd_rf** %2, align 8
  %15 = call i32 @ZD_MEMCLEAR(%struct.zd_rf* %14, i32 8)
  ret void
}

declare dso_local i32 @ZD_MEMCLEAR(%struct.zd_rf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
